--- a/test/test-min.html
+++ b/test/test-min.html
@@ -6,8 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Title</title>
-  <script src="../dist/qrcode-encoder.js"></script>
-  <!-- <script src="../dist/qrcode-encoder.min.js"></script> -->
+  <script src="../dist/qrcode-encoder.min.js"></script>
 </head>
 
 <body>
