--- a/test/test-min.html
+++ b/test/test-min.html
@@ -19,29 +19,29 @@
 <hr>
 <canvas id="canvas"></canvas>
 <script>
-  const canvas = document.getElementById("canvas");
-  const content = document.getElementById("content");
-  const level = document.getElementById("level");
-  const mode = document.getElementById("mode");
-  const versionNumber = document.getElementById("versionNumber");
-  const encoder = document.getElementById("encoder");
-  const tip = document.getElementById("tip");
-  let qr;
-  encoder.addEventListener("click", function () {
-    let contentValue = content.value;
-    let levelValue = level.value === "" ? undefined : Number(level.value);
-    let modeValue = mode.value === "" ? undefined : Number(mode.value);
-    let versionNumberValue = versionNumber.value === "" ? undefined : Number(versionNumber.value);
+  const canvas = document.getElementById('canvas')
+  const content = document.getElementById('content')
+  const level = document.getElementById('level')
+  const mode = document.getElementById('mode')
+  const versionNumber = document.getElementById('versionNumber')
+  const encoder = document.getElementById('encoder')
+  const tip = document.getElementById('tip')
+  let qr
+  encoder.addEventListener('click', function () {
+    let contentValue = content.value
+    let levelValue = level.value === '' ? undefined : Number(level.value)
+    let modeValue = mode.value === '' ? undefined : Number(mode.value)
+    let versionNumberValue = versionNumber.value === '' ? undefined : Number(versionNumber.value)
     try {
-      qr = new QRCode(contentValue, levelValue, modeValue, versionNumberValue);
-      tip.innerText = "内容：" + contentValue + "\n纠错等级：" + qr.Level + "\n编码模式：" + qr.Mode + "\n版本号：" + qr.VersionNumber;
-      QrMatrix2Canvas(canvas, qr.Matrix, 10);
+      qr = new QRCode(contentValue, levelValue, modeValue, versionNumberValue)
+      tip.innerText = '内容：' + contentValue + '\n纠错等级：' + qr.Level + '\n编码模式：' + qr.Mode + '\n版本号：' + qr.VersionNumber
+      QrMatrix2Canvas(canvas, qr.Matrix, 10)
     } catch (e) {
-      console.error(e);
-      tip.innerText += "\n" + e;
+      console.error(e)
+      tip.innerText += '\n' + e
     }
   })
-  encoder.click();
+  encoder.click()
 
   /**
    * 二维码boolean[][]生成Canvas
@@ -50,16 +50,16 @@
    * @param pixelSize 像素尺寸
    */
   function QrMatrix2Canvas(canvas, bytes, pixelSize) {
-    let length = bytes.length;
-    let size = (length + 2) * pixelSize;
-    canvas.width = canvas.height = size;
-    canvas.style.width = canvas.style.height = size + "px";
-    let ctx = canvas.getContext('2d');
-    ctx.clearRect(0, 0, size, size);
+    let length = bytes.length
+    let size = (length + 2) * pixelSize
+    canvas.width = canvas.height = size
+    canvas.style.width = canvas.style.height = size + 'px'
+    let ctx = canvas.getContext('2d')
+    ctx.clearRect(0, 0, size, size)
     for (let x = 0; x < length; x++) {
       for (let y = 0; y < length; y++) {
         if (bytes[x][y]) {
-          ctx.fillRect((x + 1) * pixelSize, (y + 1) * pixelSize, pixelSize, pixelSize);
+          ctx.fillRect((x + 1) * pixelSize, (y + 1) * pixelSize, pixelSize, pixelSize)
         }
       }
     }
