--- a/demo/index.html
+++ b/demo/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Title</title>
-  <script src="../dist/qrcode-encoder.min.js"></script>
+  <title>QRCode Encoder Demo</title>
+  <script src="https://unpkg.com/@ali1416/qrcode-encoder@1.1.3/dist/qrcode-encoder.min.js"></script>
 </head>
 
 <body>
