--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>QRCode Encoder Demo</title>
-  <script src="https://unpkg.com/@ali1416/qrcode-encoder@1.1.3/dist/qrcode-encoder.min.js"></script>
+  <script src="https://unpkg.com/@ali1416/qrcode-encoder/dist/qrcode-encoder.min.js"></script>
 </head>
 
 <body>
